# pyrate-cache

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyrate_cache/: __init__.py  cache.py  ratelimit.py
tests/: test_cache.py  test_ratelimit.py
