[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrate-cache"
version = "0.1.0"
description = "Tiny dependency-free rate limiting and caching decorators for Python."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
keywords = ["cache", "rate-limit", "decorator", "token-bucket", "throttle"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JCreatesGH/pyrate-cache"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
